# bg3-toolkit

./: .gitignore  config.default.yaml  pyproject.toml
bg3/: __init__.py  config.py  import_.py  main.py  search.py
